--- a/webserver/package.json
+++ b/webserver/package.json
@@ -6,13 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    "bcrypt": "latest",
     "body-parser": "~1.16.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
-    "ejs": "~2.5.5",
+    "ejs": "^2.5.6",
     "express": "~4.14.1",
+    "express-session": "^1.15.1",
+    "mongoose": "^4.9.0",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
