--- a/webserver/package.json
+++ b/webserver/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.16.0",
     "connect-flash": "^0.1.1",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.1",
     "debug": "~2.6.0",
@@ -16,7 +17,7 @@
     "express-session": "^1.15.1",
     "mongoose": "^4.9.0",
     "morgan": "~1.7.0",
-    "multer": "^1.3.0",
+    "multer": "latest",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.2"
