--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:required="true" />
 
     <application
-        android:name=".application.MyApplication"
+        android:name=".application.TripTP"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
