--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -43,7 +43,9 @@
         <activity android:name=".AtraccionActivity" />
         <activity android:name=".CiudadActivity" />
         <activity android:name=".CiudadesActivity" />
-        <activity android:name=".ConfigActivity"></activity>
+        <activity android:name=".ConfigActivity" />
+        <activity android:name=".FullScreenViewActivity"
+            android:theme="@android:style/Theme.Holo.NoActionBar"/>
     </application>
 
 </manifest>
