--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+    <uses-feature android:name="android.hardware.location.network" />
+    <uses-feature android:name="android.hardware.location.gps" />
 
     <application
         android:name=".application.TripTP"
@@ -44,7 +46,10 @@
         <activity android:name=".CiudadActivity" />
         <activity android:name=".CiudadesActivity" />
         <activity android:name=".ConfigActivity" />
-        <activity android:name=".FullScreenViewActivity"
+        <activity
+            android:name=".FullScreenViewActivity"
+            android:theme="@android:style/Theme.Holo.NoActionBar" />
+        <activity android:name=".MapActivity"
             android:theme="@android:style/Theme.Holo.NoActionBar"/>
     </application>
 
