--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -49,12 +49,10 @@
         <activity
             android:name=".FullScreenViewActivity"
             android:theme="@android:style/Theme.Holo.NoActionBar" />
-<<<<<<< HEAD
         <activity android:name=".MapActivity"
             android:theme="@android:style/Theme.Holo.NoActionBar"/>
-=======
-        <activity android:name=".VideoActivity"></activity>
->>>>>>> origin/client
+        <activity android:name=".VideoActivity"/>
+
     </application>
 
 </manifest>
