--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -42,18 +42,21 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".AtraccionActivity"
-            android:configChanges="orientation|screenSize"/>
+        <activity
+            android:name=".AtraccionActivity"
+            android:configChanges="orientation|screenSize" />
         <activity android:name=".CiudadActivity" />
         <activity android:name=".CiudadesActivity" />
         <activity android:name=".ConfigActivity" />
         <activity
             android:name=".FullScreenViewActivity"
             android:theme="@android:style/Theme.Holo.NoActionBar" />
-        <activity android:name=".MapActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar"/>
-        <activity android:name=".VideoActivity"/>
-
+        <activity
+            android:name=".MapActivity"
+            android:theme="@android:style/Theme.Holo.NoActionBar" />
+        <activity android:name=".VideoActivity" />
+        <activity android:name=".BuscaAtrCercaActivity" />
+        <activity android:name=".AtraccionesActivity"></activity>
     </application>
 
 </manifest>
