--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:name=".application.TripTP"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/trip_icono"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
