--- a/webserver/package.json
+++ b/webserver/package.json
@@ -21,6 +21,7 @@
     "multer": "latest",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "request": "^2.81.0",
     "serve-favicon": "~2.3.2"
   }
 }
