closes #117   closes #116   closes #115 closes #114 closes #111 closes #112 closes #113 closes #110
agrego reseñas vista, post, get, facebook, twitter login, logut

--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -44,6 +44,11 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="5a10bdb8732b9727753a3668530275dea78e69cf"
+            />
+
         <activity android:name=".MainActivity" />
         <activity
             android:name=".AtraccionActivity"
