--- a/client/MyApplication/app/build.gradle
+++ b/client/MyApplication/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile('com.twitter.sdk.android:twitter:2.3.2@aar') {
+        transitive = true;
+    }
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
@@ -37,8 +40,9 @@ dependencies {
     compile 'com.android.support:design:25.3.0'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-messaging:10.2.0'
     testCompile 'junit:junit:4.12'
-    compile('com.twitter.sdk.android:twitter:2.3.2@aar') {
-        transitive = true;
-    }
 }
+
+apply plugin: 'com.google.gms.google-services'
