--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -26,7 +26,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        >
+        <service
+            android:name=".services.FCM_Service"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".services.FCM_InstanceService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,8 +60,7 @@
             android:value="@string/facebook_app_id" />
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="5a10bdb8732b9727753a3668530275dea78e69cf"
-            />
+            android:value="5a10bdb8732b9727753a3668530275dea78e69cf" />
 
         <activity android:name=".MainActivity" />
         <activity
@@ -65,7 +78,8 @@
         <activity android:name=".VideoActivity" />
         <activity android:name=".BuscaAtrCercaActivity" />
         <activity android:name=".AtraccionesActivity" />
-        <activity android:name=".FullImageMapActivity"></activity>
+        <activity android:name=".FullImageMapActivity" />
+        <activity android:name=".RecorridoActivity"></activity>
     </application>
 
 </manifest>
