--- a/webserver/package.json
+++ b/webserver/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.6",
     "express": "~4.14.1",
     "express-session": "^1.15.1",
+    "firebase-admin": "^4.2.1",
     "glob": "^7.1.1",
     "mongoose": "^4.9.0",
     "morgan": "~1.7.0",
