--- a/client/MyApplication/app/src/main/AndroidManifest.xml
+++ b/client/MyApplication/app/src/main/AndroidManifest.xml
@@ -78,7 +78,9 @@
         <activity android:name=".RecorridoActivity" />
         <activity android:name=".FavoritosRecorridosActivity" />
         <activity android:name=".FavoritosAtraccionesActivity" />
-        <activity android:name=".VisitadoActivity"></activity>
+        <activity android:name=".VisitadoActivity" />
+        <activity android:name=".PuntoInteresActivity" />
+        <activity android:name=".FullScreenViewPIActivity"></activity>
     </application>
 
 </manifest>
